--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -217,7 +217,7 @@
         border-radius: 5%;
     }
     .victory{
-        font-family: deutsch;
+        font-family: Deutsch;
         font-size: 10em;
         color:rgb(218, 153, 32);
     }
