--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -1,6 +1,6 @@
 <div class="victoryCont {{gameOver === true ? '':'hidden'}}">
   <button class="btn-dark" routerLink=''>
-    <h1 class="victory row"><b>VICTORY!<br> {{winner}}!</b></h1>
+    <h1 class="victory row"><b>VICTORY!<br> {{winner}}</b></h1>
   </button>
 </div>
 
