--- a/src/app/game-play/game-play.component.scss
+++ b/src/app/game-play/game-play.component.scss
@@ -228,8 +228,15 @@
 .graphText {
     font-family: Deutsch;
 }
-.modal{
+.modal-content{
     font-family: Deutsch;
+    background-color: #B2B3B7;
+    button{
+        color: whitesmoke;
+    }
+    h3{
+        font-size: 5em;
+    }
 }
 .help{
     display: flex;
@@ -240,4 +247,17 @@
         font-size: 1.2em;
         width: 7em;
     }
+}
+.modal-body{
+    overflow: auto;
+    height: 30em;
+    width:100%;
+    
+    p{
+        font-size: 2em;
+    }
+    h4{
+        font-size: 3em;
+    }
+    
 }
