changed modal design

--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -43,7 +43,7 @@
     </div>
 
       <!-- Modal -->
-      <div class="modal fade" id="instructionsOverview" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
+      <div class="modal" id="instructionsOverview" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -64,7 +64,7 @@
         </div>
       </div>
       <!-- Modal for select player -->
-      <div class="modal fade" id="selectPlayerPhase" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
+      <div class="modal" id="selectPlayerPhase" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -86,7 +86,7 @@
         </div>
       </div>
       <!-- Modal for move player -->
-      <div class="modal fade" id="movePlayerPhase" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
+      <div class="modal" id="movePlayerPhase" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -108,7 +108,7 @@
         </div>
       </div>
       <!-- Modal for attack player -->
-      <div class="modal fade" id="attackPlayerPhase" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
+      <div class="modal" id="attackPlayerPhase" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -130,7 +130,7 @@
         </div>
       </div>
       <!-- Modal for game end player -->
-      <div class="modal fade" id="gameEndPhase" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
+      <div class="modal" id="gameEndPhase" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
