--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -22,7 +22,8 @@
       ? 'Player 1' : 'Player 2'}}</h2>
     <div class='row'>
       <h3 class="
-      {{selectPiecePhase ? currentPlayer ? 'purple' : 'yellow' : ''}}">Select a Unit</h3>
+      {{selectPiecePhase ? currentPlayer ? 'purple' : 'yellow' : ''}}">Select
+        a Unit</h3>
       <button (click)="
       deselectUnit()">Deselect</button>
     </div>
@@ -42,114 +43,151 @@
       <button class="helpBtn btn-xs btn-danger" data-toggle="modal" data-target="#instructionsOverview">Help</button>
     </div>
 
-      <!-- Modal -->
-      <div class="modal fade" id="instructionsOverview" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h3 class="modal-title" id="instructionsTitle">Troll Wars</h3>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <h4><b>Overview</b></h4>
-              <p>Welcome to Troll Wars. This turn based game will test your logic and skill against some of the best players in the world. Each player will move around the board attacking their opponents. Be careful to check the defence and attack of your enemy before getting to close. </p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#selectPlayerPhase">Next</button>
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-            </div>
+    <!-- Modal -->
+    <div class="modal fade" id="instructionsOverview" tabindex="-1" role="dialog"
+      aria-labelledby="instructionsTitle" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title" id="instructionsTitle">Troll Wars</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <h4><b>Overview</b></h4>
+            <p>Welcome to Troll Wars. This turn based game will test your logic
+              and skill against some of the best players in the world. Each
+              player will move around the board attacking their opponents. Be
+              careful to check the defence and attack of your enemy before
+              getting to close. </p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-dark" data-dismiss="modal"
+              data-toggle="modal" data-target="#selectPlayerPhase">Next</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
-      <!-- Modal for select player -->
-      <div class="modal fade" id="selectPlayerPhase" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h3 class="modal-title" id="instructionsTitle">Troll Wars</h3>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <h4><b>Select Player Phase</b></h4>
-              <p>The first phase is the select player phase. Each player will be asked to select which piece they would like to move. When deciding which piece to move you can hover over each place and see the associated traits for each character. Once a player is selected you will see a blue shaded area appear. This area represents all possible moves for that character.</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#instructionsOverview">Back</button>
-              <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#movePlayerPhase">Next</button>
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-            </div>
+    </div>
+    <!-- Modal for select player -->
+    <div class="modal fade" id="selectPlayerPhase" tabindex="-1" role="dialog"
+      aria-labelledby="instructionsTitle" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title" id="instructionsTitle">Troll Wars</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <h4><b>Select Player Phase</b></h4>
+            <p>The first phase is the select player phase. Each player will be
+              asked to select which unit they would like to move. When deciding
+              which unit to move, you can hover over each place and see the
+              associated traits for each unit. Once a unit is selected you will
+              see a blue shaded area appear. This area represents all possible
+              moves for that unit.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-dark" data-dismiss="modal"
+              data-toggle="modal" data-target="#instructionsOverview">Back</button>
+            <button type="button" class="btn btn-dark" data-dismiss="modal"
+              data-toggle="modal" data-target="#movePlayerPhase">Next</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
-      <!-- Modal for move player -->
-      <div class="modal fade" id="movePlayerPhase" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h3 class="modal-title" id="instructionsTitle">Troll Wars</h3>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <h4><b>Move Player Phase</b></h4>
-              <p>Moving on to the move player phase, each player will be asked to select a space in the provided spaces. At this point you have two options. Either you can choose any spot within the shaded area and move the character there, or, you can choose the “No Move” button and move into the attack phase</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#selectPlayerPhase">Back</button>
-              <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#attackPlayerPhase">Next</button>
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-            </div>
+    </div>
+    <!-- Modal for move player -->
+    <div class="modal fade" id="movePlayerPhase" tabindex="-1" role="dialog"
+      aria-labelledby="instructionsTitle" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title" id="instructionsTitle">Troll Wars</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <h4><b>Move Player Phase</b></h4>
+            <p>On the move player phase, the player will be asked to
+              select a space to move to, in the provided spaces highlighted in
+              blue. At this point
+              you have two options. You can choose any location within the
+              highlighted area
+              and move the unit there, or you can choose the “No Move”
+              option and transition into the attack phase.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-dark" data-dismiss="modal"
+              data-toggle="modal" data-target="#selectPlayerPhase">Back</button>
+            <button type="button" class="btn btn-dark" data-dismiss="modal"
+              data-toggle="modal" data-target="#attackPlayerPhase">Next</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
-      <!-- Modal for attack player -->
-      <div class="modal fade" id="attackPlayerPhase" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h3 class="modal-title" id="instructionsTitle">Troll Wars</h3>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <h4><b>Attack Player Phase</b></h4>
-              <p>Once you move on to the attack player phase, you will see a red highlighted area surrounding the character chose to move. Any opposing piece located in the shaded area will be available to attack. Be sure to look at heath and defence stats for each possible attack to ensure maximum impact. If no character falls in your range you can choose the “No Attack” button to  end your turn.</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#movePlayerPhase">Back</button>
-              <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#gameEndPhase">Next</button>
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-            </div>
+    </div>
+    <!-- Modal for attack player -->
+    <div class="modal fade" id="attackPlayerPhase" tabindex="-1" role="dialog"
+      aria-labelledby="instructionsTitle" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title" id="instructionsTitle">Troll Wars</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <h4><b>Attack Player Phase</b></h4>
+            <p>Once in the attack player phase, you will see a red
+              highlighted area surrounding the selected unit. Any
+              opposing piece located in the shaded area will be available to
+              attack. Be sure to look at heath and defence stats for each
+              possible attack to ensure maximum impact. If no character falls
+              in your range you can choose the “No Attack” button, or "End
+              Turn", to end your
+              turn.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-dark" data-dismiss="modal"
+              data-toggle="modal" data-target="#movePlayerPhase">Back</button>
+            <button type="button" class="btn btn-dark" data-dismiss="modal"
+              data-toggle="modal" data-target="#gameEndPhase">Next</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
-      <!-- Modal for game end player -->
-      <div class="modal fade" id="gameEndPhase" tabindex="-1" role="dialog" aria-labelledby="instructionsTitle" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h3 class="modal-title" id="instructionsTitle">Troll Wars</h3>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <h4><b>End of Game</b></h4>
-              <p>The game ends when one player loses all of their pieces. At which point, a victor is declared and you are able to reset the game. </p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-dark" data-dismiss="modal" data-toggle="modal" data-target="#attackPlayerPhase">Back</button>
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-            </div>
+    </div>
+    <!-- Modal for game end player -->
+    <div class="modal fade" id="gameEndPhase" tabindex="-1" role="dialog"
+      aria-labelledby="instructionsTitle" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title" id="instructionsTitle">Troll Wars</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <h4><b>End of Game</b></h4>
+            <p>The game ends when one player loses all of their pieces. At
+              which point, a victor is declared and you are able to reset the
+              game. </p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-dark" data-dismiss="modal"
+              data-toggle="modal" data-target="#attackPlayerPhase">Back</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
+    </div>
   </div>
   <div class="pieceInfoCont">
     <div class="pieceInfoTitle">
@@ -162,23 +200,29 @@
       <div>
       </div>
       <div class="infoText">
-        <div style="height:10vh; width:20vw" class="graphTextCont"> 
-          <h6 class="graphText ">Health: <canvas id="healthChart" position="right"width="200px" height="25px"></canvas></h6>
+        <div style="height:10vh; width:20vw" class="graphTextCont">
+          <h6 class="graphText ">Health: <canvas id="healthChart" position="right"
+              width="200px" height="25px"></canvas></h6>
         </div>
         <div style="height:10vh; width:20vw" class="graphTextCont">
-          <h6 class="graphText row">Attack: <canvas id="attackChart" width="200px" height="25px"></canvas></h6>
+          <h6 class="graphText row">Attack: <canvas id="attackChart" width="200px"
+              height="25px"></canvas></h6>
         </div>
         <div style="height:10vh; width:20vw" class="graphTextCont">
-          <h6 class="graphText row">Defense: <canvas id="defenseChart" width="200px" height="25px"></canvas></h6>
+          <h6 class="graphText row">Defense: <canvas id="defenseChart" width="200px"
+              height="25px"></canvas></h6>
         </div>
         <div style="height:10vh; width:20vw" class="graphTextCont">
-          <h6 class="graphText row">Attack Range: <canvas id="attackRangeChart" width="200px" height="25px"></canvas></h6>
-        </div>
-        <div style="height:10vh; width:20vw" class="graphTextCont"> 
-          <h6 class="graphText row">Move Range: <canvas id="moveRangeChart" width="200px" height="25px"></canvas></h6>
+          <h6 class="graphText row">Attack Range: <canvas id="attackRangeChart"
+              width="200px" height="25px"></canvas></h6>
         </div>
         <div style="height:10vh; width:20vw" class="graphTextCont">
-          <h6 class="graphText row">Cool Down: <canvas id="coolDownChart" width="200px" height="25px"></canvas></h6>
+          <h6 class="graphText row">Move Range: <canvas id="moveRangeChart"
+              width="200px" height="25px"></canvas></h6>
+        </div>
+        <div style="height:10vh; width:20vw" class="graphTextCont">
+          <h6 class="graphText row">Cool Down: <canvas id="coolDownChart" width="200px"
+              height="25px"></canvas></h6>
         </div>
       </div>
     </div>
