added the cooldown status or available status if the unit on hover is on CD or not

--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -192,6 +192,9 @@
   <div class="pieceInfoCont">
     <div class="pieceInfoTitle">
       <h2>{{selectedPiece.type}}</h2>
+      <h6>
+        {{selectedPiece.activeCoolDown > 0 ? 'On Cooldown' : 'Available'}}
+      </h6>
     </div>
     <div class="pieceInfoDisplay ">
       <div class="infoImage row">
