--- a/src/app/game-play/game-play.component.html
+++ b/src/app/game-play/game-play.component.html
@@ -71,7 +71,7 @@
       </div>
     </div>
     <!-- Modal for select player -->
-    <div class="modal fade" id="selectPlayerPhase" tabindex="-1" role="dialog"
+    <div class="modal" id="selectPlayerPhase" tabindex="-1" role="dialog"
       aria-labelledby="instructionsTitle" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -101,7 +101,7 @@
       </div>
     </div>
     <!-- Modal for move player -->
-    <div class="modal fade" id="movePlayerPhase" tabindex="-1" role="dialog"
+    <div class="modal" id="movePlayerPhase" tabindex="-1" role="dialog"
       aria-labelledby="instructionsTitle" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -132,7 +132,7 @@
       </div>
     </div>
     <!-- Modal for attack player -->
-    <div class="modal fade" id="attackPlayerPhase" tabindex="-1" role="dialog"
+    <div class="modal" id="attackPlayerPhase" tabindex="-1" role="dialog"
       aria-labelledby="instructionsTitle" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -164,7 +164,7 @@
       </div>
     </div>
     <!-- Modal for game end player -->
-    <div class="modal fade" id="gameEndPhase" tabindex="-1" role="dialog"
+    <div class="modal" id="gameEndPhase" tabindex="-1" role="dialog"
       aria-labelledby="instructionsTitle" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
